Update at Featured Project text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,12 @@ body {
 	margin-left: 5px;
 }
 
+.info-text span {
+	padding: 2px;
+	background-color: white;
+	color: black;
+}
+
 #projects {
 	padding-top: 20px;
 }
